# eCommerce

./: .env.example  .gitignore  Makefile  README.md  backend.md  docker-compose.yml  frontend.md  nginx.conf  project-description.md
backend/: .dockerignore  .env.example  Dockerfile  dummy_data.json  entrypoint.sh  pyproject.toml  requirements.txt  wait-for-postgres.sh
backend/core/: settings.py  urls.py
backend/product/: admin.py  models.py  tests.py
backend/product/api/v1/: permissions.py  serializers.py  urls.py  views.py
backend/product/migrations/: 0001_initial.py  0002_remove_stock_name_alter_category_created_by_and_more.py  0003_alter_product_name.py
backend/templates/: home.html
backend/user/: admin.py  models.py  tests.py  views.py
backend/user/api/v1/: serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_ecommerceuser_is_superuser.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/components/: CustomDialog.tsx  NavBar.tsx  PasswordChangeForm.tsx  ProductList.tsx  ProfileUpdateForm.tsx  SiteHeader.tsx  StockList.tsx  Table.tsx  ToastErrors.tsx
frontend/components/Category/: CategoryForm.tsx  CategoryList.tsx
frontend/components/Product/: ProductForm.tsx  ProductList.tsx
frontend/contexts/: AuthContext.tsx
frontend/utilities/: auth.ts  contstants.ts  cookie-utils.ts  fetchUtils.ts  formValidationUtilities.ts  types.ts
(+33 files in other folders)
